--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@prisma/client": "^5.7.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.3",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4",
+    "react-select": "^5.8.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
