--- a/package.json
+++ b/package.json
@@ -10,26 +10,28 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.3",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
+    "npm-force-resolutions": "^0.0.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-moment": "^1.1.3",
     "react-redux": "^9.0.4",
     "react-select": "^5.8.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.11.4",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "prisma": "^5.7.1",
+    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
